# smart-tire-analyzer

./: .dockerignore  .dvcignore  .env.example  .env.production  .eslintrc.json  .gitignore  AUDIT_SUMMARY.md  FIX_PLAN.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_READINESS.md  QUICK_START.md  README.md  debug_root.bat  dvc.yaml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  run_services.bat
ai_model/: classes.py  tabular_model.py
android-app/: HistoryScreen.tsx  README.md  TireDigitalTwin3D.tsx  gradle.properties  metadata.json
api_docs/: README.md
api_integrations/: __init__.py
backend/: requirements.txt
certs/: ca.crt  ca.srl  server.crt  server.csr
configs/: api_config.yaml  app_config.yaml  mlops_config.yaml  model_config.yaml  training_config.yaml
continuous_learning/: __init__.py  feedback_service.py  sample_storage.py
dataset/: README.md  __init__.py  class_schemas.py
docs/: API_KEY_ROTATION.md  ARCHITECTURE.md  FINAL_YEAR_PROJECT_ARCHITECTURE.md  POSTGRESQL_MIGRATION.md  PROJECT_REPORT.md  REGULATORY_CERTIFICATION.md  TESTING_STRATEGY.md  UML_DIAGRAMS.md  api_reference.md  continuous_learning.md  deployment_guide.md  training_guide.md
frontend/: App.tsx  app.json  eslint.config.mjs  native-stubs.d.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
mlops/: README.md  airflow_smart_tire_dag.py  dvc.yaml  kubeflow_pipeline.py
scripts/: add_learning_samples.py  debug_key_rotation.py  deploy_k8s_tls.sh  export_model.py  infer.py  (+19 more)
(+2556 files in other folders)
